# textalyzer

./: .clang-format  .gitmodules  CMakeLists.txt  FEATURES.md  LICENSE.md  README.md
cmake/: BuildType.cmake  CompilerFlags.cmake
cmake/modules/: CompilerFlags.cmake  InitSubmodules.cmake
include/textalyzer/: Analyzer.hpp  StopwordFilter.hpp  WordExpander.hpp  WordFilter.hpp  caseFold.hpp  editCharacter.hpp  ngramify.hpp  stringOps.hpp  textalyzer.hpp  tokenize.hpp  utils.hpp
samples/: CMakeLists.txt
samples/src/: testData.hpp
src/: Analyzer.cpp  StopwordFilter.cpp  WordExpander.cpp  WordFilter.cpp  caseFold.cpp  editCharacter.cpp  ngramify.cpp  textalyer.cpp  textalyzer.cpp  tokenize.cpp  utils.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp  test_example.cpp  test_highAnalyze.cpp  test_lowAnalyze.cpp  test_main.cpp  test_medAnalyze.cpp  test_typedefs.cpp
